--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -66,6 +66,188 @@
 <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
 -->
 
+<div class="card clearfix" data-score="33" data-price="26.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y6EHQi"><img src="https://images-na.ssl-images-amazon.com/images/I/81DcDzDl%2BOL._SX679_.jpg" alt="Kasa Smart Light Switch" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>2,899 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y6EHQi">Kasa Smart Light Switch by TP-Link – Needs Neutral Wire, WiFi Light Switch, Works with Alexa & Google (HS200)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$26.99</span><span class="ori_price">$39.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y6EHQi">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="64.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y4Jod8"><img src="https://images-na.ssl-images-amazon.com/images/I/71VrOmi5rEL._SX679_.jpg" alt="Beats EP On-Ear Headphones" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>725 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y4Jod8">Beats EP On-Ear Headphones - White</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$64.95</span><span class="ori_price">$129.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y4Jod8">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="23" data-price="192.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WY4Iok"><img src="https://images-na.ssl-images-amazon.com/images/I/51xR-ElMXUL._SX679_.jpg" alt="ecobee4 Smart Thermostat" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,684 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WY4Iok">ecobee4 Smart Thermostat with Built-In Alexa, Room Sensor Included</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$192.97</span><span class="ori_price">$249.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WY4Iok">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="51" data-price="35.43">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WVPIT3"><img src="https://images-na.ssl-images-amazon.com/images/I/81PDlzYF9QL._SX679_.jpg" alt="Mega Crane Playset" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>289 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WVPIT3">Dickie Toys 48" Mega Crane Playset</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$35.43</span><span class="ori_price">$71.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WVPIT3">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="11.24">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y0cyKI"><img src="https://images-na.ssl-images-amazon.com/images/I/71SmdTytGkL._SY679_.jpg" alt="Best Naturals Alpha Liopic Acid 600 mg 120 Capsules" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>364 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y0cyKI">Best Naturals Alpha Liopic Acid 600 mg 120 Capsules - ALA Alpha Lipoic Acid Powerful Antioxidant </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.24</span><span class="ori_price">$14.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y0cyKI">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="44" data-price="19.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WT7KFD"><img src="https://images-na.ssl-images-amazon.com/images/I/61K1-Lj1G0L._SX522_.jpg" alt="Equinox Digital Thermometer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,039 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>44% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WT7KFD">Equinox Digital Thermometer Non Contact Infrared Forehead - 3-Modes Body/Surface/Room Temperature Reading Device – Baby Thermometer</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.49</span><span class="ori_price">$34.99</span>
+        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WT7KFD">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="27" data-price="36.54">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2N37swc"><img src="https://images-na.ssl-images-amazon.com/images/I/61Kvhtz9KML._SX679_.jpg" alt="Wireless Car Charger Mount" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>125 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>27% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2N37swc">Wireless Car Charger Mount,CNSL Patent Auto Clamping QI 15W Fast Charging Metal Motor Phone Holder with Strong Suction,Air Vent Windshield Dashboard Stand,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$36.54</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2N37swc">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="38" data-price="11.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Iy1XS0"><img src="https://images-na.ssl-images-amazon.com/images/I/81XBoHrOF3L._UX679_.jpg" alt="Champion T-Shirt" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>889 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>38% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Iy1XS0">Champion Men's Classic Jersey Script T-Shirt</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$11.69</span><span class="ori_price">$19.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Iy1XS0">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="59.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2L3oJ5A"><img src="https://images-na.ssl-images-amazon.com/images/I/81NlcW-gc9L._SX522_.jpg" alt="ARRIS Surfboard (8x4) DOCSIS 3.0 Cable Modem" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>23,197 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2L3oJ5A">ARRIS Surfboard (8x4) DOCSIS 3.0 Cable Modem Plus AC1600 Dual Band Wi-Fi Router, 343 Mbps Max Speed, Certified for Comcast Xfinity, Spectrum,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$59.97</span><span class="ori_price">$119.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2L3oJ5A">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="29.94">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IXIedk"><img src="https://images-na.ssl-images-amazon.com/images/I/91JPrxbYLeL._SY879_.jpg" alt="jbl Go 2 Portable Bluetooth Waterproof Speaker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>567 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IXIedk">jbl Go 2 Portable Bluetooth Waterproof Speaker, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.94</span><span class="ori_price">$39.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IXIedk">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card dealofday clearfix" data-score="38" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2N0fS7x"><img src="https://images-na.ssl-images-amazon.com/images/I/71KweBk41NL._AC_SR300,300_.jpg" alt="Amazon Deal Of The Day" /></a>
