--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -66,6 +66,188 @@
 <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
 -->
 
+<div class="card clearfix" data-score="29" data-price="105.88">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y5zdVV"><img src="https://images-na.ssl-images-amazon.com/images/I/717EfW62ZqL._SX679_.jpg" alt="Homall Single Recliner Chair " /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>662 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y5zdVV">Homall Single Recliner Chair Padded Seat PU Leather Living Room Sofa Recliner Modern Recliner Seat Club Chair Home Theater Seating (Black)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$105.88</span><span class="ori_price">$149.99</span>
+        <div class="tooltip_orange"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y5zdVV">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="39" data-price="129.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y7qOBh"><img src="https://images-na.ssl-images-amazon.com/images/I/81njKtGaDxL._SX522_.jpg" alt="Gigabyte Geforce" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,150 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>39% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y7qOBh">Gigabyte Geforce GTX 1050 Ti OC 4GB GDDR5 128 Bit PCI-E Graphic Card (GV-N105TOC-4GD)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$129.00</span><span class="ori_price">$209.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y7qOBh">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="33" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IB6jYt"><img src="https://images-na.ssl-images-amazon.com/images/I/71M%2BELzh0xL._SX679_.jpg" alt="Logitech K750 Wireless Solar Keyboard" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>3,855 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>33% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IB6jYt">Logitech K750 Wireless Solar Keyboard for Mac — Solar Recharging, Mac-Friendly Keyboard, 2.4GHz Wireless - Silver</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$59.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IB6jYt">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WVPIr0"><img src="https://images-na.ssl-images-amazon.com/images/I/81BNVw8zNEL._SX679_.jpg" alt="O-Cedar MicroTwist Microfiber Twist Mop" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>494 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WVPIr0">O-Cedar MicroTwist Microfiber Twist Mop</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.98</span><span class="ori_price">$19.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WVPIr0">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="69" data-price="22.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WWY5m4"><img src="https://images-na.ssl-images-amazon.com/images/I/81pPeWGX--L._SX522_.jpg" alt="Swiffer WetJet Hardwood and Floor Spray Mop Cleaner" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>2,081 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>69% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WWY5m4">Swiffer WetJet Hardwood and Floor Spray Mop Cleaner Starter Kit, Includes: 1 Power Mop, 5 Pads, Cleaner Solution, Batteries </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$22.97</span><span class="ori_price">$74.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WWY5m4">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="38" data-price="123.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y5x5h1"><img src="https://images-na.ssl-images-amazon.com/images/I/81N56wJJBsL._SX522_.jpg" alt="" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,784 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>38% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y5x5h1">Bowflex Weight Benches</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$123.90</span><span class="ori_price">$199.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y5x5h1">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="26" data-price="73.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WZDDMC"><img src="https://images-na.ssl-images-amazon.com/images/I/71iD5RyhuaL._SY879_.jpg" alt="Ninja Professional 72oz Countertop Blender" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>3,431 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>26% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WZDDMC">Ninja Professional 72oz Countertop Blender with 1000-Watt Base and Total Crushing Technology for Smoothies, Ice and Frozen Fruit (BL610), Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$73.99</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WZDDMC">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Y9h5ug"><img src="https://images-na.ssl-images-amazon.com/images/I/612aCM9oIdL._SX522_.jpg" alt=">White Noise Sound Machine" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>9,606 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Y9h5ug">White Noise Sound Machine | Portable Sleep Therapy for Home, Office, Baby & Travel | 6 Relaxing & Soothing Nature Sounds, Battery or Adapter Charging Options,</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$24.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Y9h5ug">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WZQ232"><img src="https://images-na.ssl-images-amazon.com/images/I/81cQnCppK5L._SX679_.jpg" alt="LEGO Creator 3in1 Shuttle Transporter" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>55 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WZQ232">LEGO Creator 3in1 Shuttle Transporter 31091 Building Kit , New 2019 (341 Piece)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$24.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2WZQ232">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="27" data-price="109.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J5a1bX"><img src="https://images-na.ssl-images-amazon.com/images/I/71PQPfUMm5L._SX522_.jpg" alt="LEGO Star Wars Episode VIII" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>116 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>27% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J5a1bX">LEGO Star Wars Episode VIII First Order Heavy Assault Walker 75189 Building Kit (1376 Piece)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$109.99</span><span class="ori_price">$149.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J5a1bX">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="26" data-price="229.00">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2IxzLhP"><img src="https://images-na.ssl-images-amazon.com/images/I/518tGPL3OxL._SX522_.jpg" alt="Apple Watch Series 3" /></a>
